@@ -1,4 +1,0 @@
-/var/log/nova/nova-instancemonitor.log {
-    daily
-    missingok
-}
