@@ -1,1 +1,0 @@
-debian/mans/nova-instancemonitor.8
