@@ -1,19 +1,0 @@
-description "Nova instance monitor"
-author "Soren Hansen <soren@linux2go.dk>"
-
-start on (filesystem and net-device-up IFACE!=lo)
-stop on runlevel [016]
-
-respawn
-
-chdir /var/run
-
-pre-start script
-	mkdir -p /var/run/nova
-	chown nova:root /var/run/nova
-
-	mkdir -p /var/lock/nova
-	chown nova:root /var/lock/nova
-end script
-
-exec su -c "nova-instancemonitor --flagfile=/etc/nova/nova.conf" nova
